--- a/hello.html
+++ b/hello.html
@@ -1,1 +1,74 @@
-<DOCTYPE! html>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>potatoes</title>
+</head>
+<body>
+	<div style="color: yellow ;background-color: red">
+		<h1>potatoes</h1>
+		<h2>potatoes are the best vegtebles</h2>
+		<p>potatoes potatoes potatoes potatoes potatoes potatoes potatoes potatoes potatoes potatoes potatoes potatoes potatoes potatoes potatoes potatoes potatoes potatoes potatoes potatoes potatoes potatoes potatoes potatoes potatoes potatoes potatoes potatoes potatoes potatoes
+	</div>
+	<div style="color: blue ;background-color: black">
+		<br>
+		<img src="https://images-na.ssl-images-amazon.com/images/I/811fGdwqf%2BL._SL1500_.jpg" alt="pic" width="500" style="background-image: white">
+		<br>
+		<a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=2ahUKEwi24cyaosbcAhWIAsAKHc16C5YQFjAAegQIABAB&url=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FPotato&usg=AOvVaw1qxqvst-BjGU-HHRAihWED">why are potatoes the best?</a>
+		<table border="1">
+			<tr>
+				<th> name</th>
+				<th>favorite fruit</th>
+				<th>favorite superhero</th>
+				<th>favorite qoute</th>
+			</tr>
+			<tr>
+				<td>idan</td>
+				<td>mango</td>
+				<td>dr.strange</td>
+				<td>"better late than never"</td>
+			</tr>
+			<tr>
+				<td>tamer</td>
+				<td>pears</td>
+				<td>the flash</td>
+				<td>"never say never"</td>
+			</tr>
+			<tr>
+				<td>noam</td>
+				<td>mango</td>
+				<td>deadpool</td>
+				<td>no comment</td>
+			</tr>
+		</table>
+		<ul style="list-style-type:none">
+			<li>harry potter</li>
+			<li>the chronicles of narnia</li>
+			<li>the lion king</li>
+			<li>how to train your dragon</li>
+			<li>most marvel movies</li>
+		</ul>
+		<ol>
+			<li>the alchmist</li>
+			<li>harry potter</li>
+			<li>the maze runner</li>
+
+		</ol>
+		<form>
+			
+			<input type="text" name="username" placeholder="username">
+			<input type="password" name="password" placeholder="password">
+			<br>
+			<input type="checkbox" name="hobby" value="watching tv">i like watching tv
+			<input type="checkbox" name="hobby" value="music">i like making music
+			<br>
+			<input type="checkbox" name="hobby" value="climbing"> i love climbing
+			<input type="checkbox" name="hobby" value="food">i love eating
+			<br>
+			<input type="radio" name="meet">student
+			<input type="radio" name="meet">teacher
+			<input type="radio" name="meet">TA
+			<br>
+			<input type="submit" value="submit">
+		</form>
+	</div>
+</body>
